...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Login" translatesAutoresizingMaskIntoConstraints="NO" id="urn-G6-8ZS">
                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="emilio@gmail.com" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1wj-K5-dhc" userLabel="TxtCorreo">
                                        <rect key="frame" x="0.0" y="26.333333333333314" width="313" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="pass@word1" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cRk-VL-MKP" userLabel="TxtContrasenia">
                                        <rect key="frame" x="0.0" y="136.66666666666669" width="313" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="195.33333333333337" width="313" height="34.333333333333343"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Ingresar">
                                            <color key="baseBackgroundColor" red="0.077867676349999998" green="0.68183391400000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        </buttonConfiguration>
...
                                        <rect key="frame" x="0.0" y="229.66666666666663" width="313" height="34.333333333333314"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Registrarse"/>
                                        <connections>
                                            <action selector="btnRegistrar:" destination="cTR-Dk-YsK" eventType="touchUpInside" id="zpN-Lo-rwf"/>
...
                    <navigationItem key="navigationItem" id="0p2-Rr-1Wc"/>
                    <connections>
                        <outlet property="lblContrasenia" destination="BYW-2c-5WK" id="kSQ-OC-0gl"/>
                        <outlet property="lblCorreo" destination="H9X-I1-CR6" id="Jof-j4-nj1"/>
                        <outlet property="txtContrasenia" destination="cRk-VL-MKP" id="3PF-pd-5dA"/>
                        <outlet property="txtCorreo" destination="1wj-K5-dhc" id="u1Y-nh-lEO"/>
...
