...
        Auth.auth().signIn(withEmail: txtCorreo.text!, password: txtContrasenia.text!) { [weak self] authResult, error in
           
            //let validarError = error
            //let validarResult = authResult
            if let ex = error {
                //aletar
                let alert = UIAlertController(title: "Mensaje", message: "Ocurrio un error al ingresar, verifica tus datos", preferredStyle: .alert)
                let action = UIAlertAction(title: "Aceptar", style: .default)
                alert.addAction(action)
                
                    self?.present(alert, animated: true)
              
                
...
